--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(CodeOptimization VERSION 0.1.0)
 
-#set(CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)
+find_package(OpenMP)
+
+set(CMAKE_CXX_FLAGS "-O3")
 
 add_executable(Executable matrix_multiplication.cc)
+
+target_link_libraries(Executable PRIVATE OpenMP::OpenMP_CXX)
